--- a/_sass/minimal-mistakes/skins/_shadow_sea.scss
+++ b/_sass/minimal-mistakes/skins/_shadow_sea.scss
@@ -3,9 +3,9 @@
    ========================================================================== */
 
 /* Colors */
-$background-color: #002255 !default;
+$background-color: #3d456a !default;
 $text-color: #eaeaea !default;
-$primary-color: #7733dd !default;
+$primary-color: #3366bb !default;
 $border-color: mix(#fff, $background-color, 20%) !default;
 $code-background-color: mix(#000, $background-color, 15%) !default;
 $code-background-color-dark: mix(#000, $background-color, 20%) !default;
