--- a/_sass/minimal-mistakes/skins/_shadow_sea.scss
+++ b/_sass/minimal-mistakes/skins/_shadow_sea.scss
@@ -5,7 +5,7 @@
 /* Colors */
 $background-color: #3d456a !default;
 $text-color: #eaeaea !default;
-$primary-color: #3366bb !default;
+$primary-color: #bb6633 !default;
 $border-color: mix(#fff, $background-color, 20%) !default;
 $code-background-color: mix(#000, $background-color, 15%) !default;
 $code-background-color-dark: mix(#000, $background-color, 20%) !default;
