changed bannerto png + background

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -24,3 +24,10 @@
     }
   }
 }
+
+.div_background {
+  background-repeat: repeat-y;;
+  background-image:: url("/images/pattern.svg");
+  width: 1200px;
+  height: 700px;
+}
