--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -29,9 +29,12 @@ $bodoni: "Bodoni MT", serif !default;
 $calisto: "Calisto MT", serif !default;
 $garamond: Garamond, serif !default;
 
+$shrikhand: "Shrikhand", "Helvetica Neue", sans-serif !default;
+
 $global-font-family: $sans-serif !default;
 $header-font-family: $sans-serif !default;
-$caption-font-family: $serif !default;
+/*$caption-font-family: $serif !default;*/
+$caption-font-family: $shrikhand !default;
 
 /* type scale */
 $type-size-1: 2.441em !default; // ~39.056px
