header font and landpage

--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -32,7 +32,8 @@ $garamond: Garamond, serif !default;
 $shrikhand: "Shrikhand", "Helvetica Neue", sans-serif !default;
 
 $global-font-family: $sans-serif !default;
-$header-font-family: $sans-serif !default;
+/*$header-font-family: $sans-serif !default;*/
+$header-font-family: $shrikhand !default;
 /*$caption-font-family: $serif !default;*/
 $caption-font-family: $shrikhand !default;
 
