--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -27,7 +27,7 @@
 
 .div_background {
   background-repeat: repeat-y;;
-  background-image:: url("/images/pattern.svg");
+  background-image:: url("/assets/images/pattern.svg");
   width: 1200px;
   height: 700px;
 }
