--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ classes: wide
 
 {{ content }}
 
-<h2> class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h2>
+<h2 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h2>
 
 {% for post in paginator.posts %}
   {% include archive-single.html %}
