--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,9 @@ classes: wide
 
 {{ content }}
 
-<h2 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h2>
+<header>
+  <h2 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h2>
+</header>
 
 {% for post in paginator.posts %}
   {% include archive-single.html %}
