--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -1,9 +1,8 @@
 ---
 layout: default
-logo_path: /assets/images/page-header-logo.png
 ---
 
-<img src="{{ page.logo_path }}" alt="logo" class="page__hero-image">
+<img src="assets/images/page-header-logo.png" alt="logo" class="page__hero-image">
 
 {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
   {% include page__hero.html %}
