--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<img src="/assets/images/page-header-logo.png" alt="logo" class="page__hero-image">
+<img src="/assets/images/page-header-logo.png" width="400" height="200" alt="logo" class="page__hero-image">
 
 {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
   {% include page__hero.html %}
