--- a/_sass/minimal-mistakes/skins/_bdc.scss
+++ b/_sass/minimal-mistakes/skins/_bdc.scss
@@ -7,9 +7,10 @@
 $background-color: #1d1d1d !default;
 /* light yellow */
 $text-color: #eaeaea !default;
-/*$primary-color: #e3c278 !default;*/
+/* light orange */
+$primary-color: #e3c278 !default;
 /* light green */
-$primary-color: #d5fff6 !default;
+/*$primary-color: #d5fff6 !default;*/
 
 $border-color: mix(#fff, $background-color, 20%) !default;
 $code-background-color: mix(#000, $background-color, 15%) !default;
