--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -4,8 +4,8 @@
 
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Coiny&display=swap" rel="stylesheet"> 
-
+<link href="https://fonts.googleapis.com/css2?family=Coiny&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Original+Surfer&display=swap" rel="stylesheet">
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
