--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -40,11 +40,25 @@
 
 .bdc_box_item {
   flex: 1 1 8rem;
-}
-
-.bdc_item {
   text-align:center;
   background-color:#282828;
+  padding:0.7rem;
+  margin:0.3rem;
+  width:8rem;
+  height:8rem;
+}
+
+.bdc_box_head {
+  flex: 1 1 8rem;
+  padding:0.7rem;
+  margin:0.3rem;
+  width:8rem;
+  height:8rem;
+}
+
+
+.bdc_box_tail{
+  flex: 1 1 8rem;
   padding:0.7rem;
   margin:0.3rem;
   width:8rem;
