--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -35,12 +35,13 @@
 .bdc_box {
   display: flex;
   flex-flow: row wrap;
+  flex-basis: 8rem;
   align-items: center;
 }
 
 .bdc_box_item {
-  flex: 1 1 8rem;
-  text-align:center;
+  flex: 1 1 auto;
+  text-align: center;
   word-break: break-all;
   overflow-wrap: break-word;
   background-color:#282828;
@@ -51,7 +52,7 @@
 }
 
 .bdc_box_head {
-  flex: 1 1 8rem;
+  flex: 1 1 auto;
   padding:0.7rem;
   margin:0.3rem;
   width:8rem;
@@ -60,7 +61,7 @@
 
 
 .bdc_box_tail{
-  flex: 1 1 8rem;
+  flex: 1 1 auto;
   padding:0.7rem;
   margin:0.3rem;
   width:8rem;
