--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -42,11 +42,12 @@
 .bdc_box_item {
   flex: 1 1 auto;
   text-align: center;
-  word-break: break-all;
+  word-wrap: break-word;
   overflow-wrap: break-word;
   background-color:#282828;
   padding:0.7rem;
   margin:0.3rem;
+  width:8rem;
   height:8rem;
 }
 
@@ -54,6 +55,7 @@
   flex: 1 1 auto;
   padding:0.7rem;
   margin:0.3rem;
+  width:8rem;
   height:8rem;
 }
 
@@ -62,5 +64,6 @@
   flex: 1 1 auto;
   padding:0.7rem;
   margin:0.3rem;
+  width:8rem;
   height:8rem;
 }
