--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -53,7 +53,7 @@
 
 /* square */
 .bdc_box_item:before {
-  content: '';
+  /*content: '';*/
   display: block;
   padding-top: 100%;
   float: left;
