--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -35,44 +35,38 @@
 .bdc_box {
   display: flex;
   flex-flow: row wrap;
-  flex-basis: 10px;
-
   justify-content: start;
   align-items: center;
 }
 
 .bdc_box_item {
-  flex: 1 1 10px;
-  text-align: center;
-  word-wrap: break-word;
-  overflow-wrap: break-word;
-  background-color:#282828;
+  flex: 1 1 auto;
   padding:0.7rem;
   margin:0.3rem;
 }
 
-/* square */
-.bdc_box_item_before {
-  /*content: '';*/
-  display: block;
-  padding-top: 100%;
-  float: left;
+.bdc_item_text {
+  width: 200px;
+  text-align: center;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  background-color:#282828;
 }
 
 .bdc_box_head {
-  flex: 1 1 10px;
+  flex: 1 1 auto;
   padding:0.7rem;
   margin:0.3rem;
 }
 
 
 .bdc_box_tail{
-  flex: 1 1 10px;
+  flex: 1 1 auto;
   padding:0.7rem;
   margin:0.3rem;
 }
 
 .bdc_box_push {
-  flex: 1 1 10px;
+  flex: 1 1 auto;
   margin-left: auto;
 }
