--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -35,14 +35,46 @@
 .bdc_box {
   display: flex;
   flex-flow: row wrap;
+  flex-basis: 10px;
+
   justify-content: start;
   align-items: center;
 }
 
 .bdc_box_item {
-  flex: 1 1 auto;
+  flex: 1 1 10px;
+  text-align: center;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  background-color:#282828;
   padding:0.7rem;
   margin:0.3rem;
+}
+
+/* square */
+.bdc_box_item_before {
+  /*content: '';*/
+  display: block;
+  padding-top: 100%;
+  float: left;
+}
+
+.bdc_box_head {
+  flex: 1 1 10px;
+  padding:0.7rem;
+  margin:0.3rem;
+}
+
+
+.bdc_box_tail{
+  flex: 1 1 10px;
+  padding:0.7rem;
+  margin:0.3rem;
+}
+
+.bdc_box_push {
+  flex: 1 1 10px;
+  margin-left: auto;
 }
 
 .bdc_item_text {
@@ -51,22 +83,4 @@
   word-wrap: break-word;
   overflow-wrap: break-word;
   background-color:#282828;
-}
-
-.bdc_box_head {
-  flex: 1 1 auto;
-  padding:0.7rem;
-  margin:0.3rem;
-}
-
-
-.bdc_box_tail{
-  flex: 1 1 auto;
-  padding:0.7rem;
-  margin:0.3rem;
-}
-
-.bdc_box_push {
-  flex: 1 1 auto;
-  margin-left: auto;
 }
