--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -33,12 +33,12 @@ $shrikhand: "Shrikhand", "Helvetica Neue", sans-serif !default;
 $original-surfer: "Original Surfer", sans-serif !default;
 
 $global-font-family: $sans-serif !default;
-/*$header-font-family: $sans-serif !default;*/
-$header-font-family: $original-surfer !default;
+$header-font-family: $sans-serif !default;
+/*$header-font-family: $original-surfer !default;*/
 /*$header-font-family: $shrikhand !default;*/
-/*$caption-font-family: $serif !default;*/
+$caption-font-family: $serif !default;
 /*$caption-font-family: $shrikhand !default;*/
-$caption-font-family: $original-surfer !default;
+/*$caption-font-family: $original-surfer !default;*/
 
 /* type scale */
 $type-size-1: 2.441em !default; // ~39.056px
