--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,3 +6,150 @@
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
+
+
+.badge {
+  height: 100px;
+  width: 300px;
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+  border-radius: 50%;
+  background: blue;
+}
+
+.circle-with-text {
+  justify-content: center;
+  align-items: center;
+  border-radius: 100%;
+  text-align: center;
+  display: flex;
+  background: blue;
+}
+
+.example img {
+  width: 60%;
+  position: relative;
+}
+
+.example .overlay {
+  position: absolute;
+  top: 80px;
+  right: 15px;
+  font-weight: bold;
+  text-align: right;
+  font-size: 30px;
+}
+
+.badgebox {
+  #border-radius: 25px;
+  border-radius: 10px 50px 30px;
+  background: #2277CC;
+  padding: 15px;
+  width: 300px;
+  height: 200px;
+  display: flex;
+}
+
+.badgebox img {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 75%;
+  position: relative;
+}
+
+.badgebox button {
+  position: absolute;
+  top: 5px;
+  left: 180px;
+  width: 5%;
+} 
+
+.badgebox .textbox {
+  position: absolute;
+  bottom: 5px;
+  left: 50px;
+  border-radius: 5px;
+  background: #222222;
+  padding: 3px;
+  width: 180px;
+  height: 80px;
+}
+
+
+.stack {
+  border-radius: 10px 50px 50px;
+  background: #37568C;
+  padding: 15px;
+  width: 300px;
+  height: 200px;
+
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.stack .row1 {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.stack .row1 .img {
+  flex: 4 0;
+}
+
+.stack .row1 .button { 
+  flex: 1;
+}
+
+.stack .text { 
+  flex: 5;
+}
+
+.cards  {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  flex-basis: 10px;
+  margin: 5px;
+}
+
+
+.card {
+  #background-color: #3F3322;
+  #background-color: yellow;
+  #padding: 5px;
+  margin: 5px;
+
+  width: 200px;
+  height: 300px;
+}
+
+.card img {
+  position: relative;
+  top: 0px;
+}
+
+.card .ellipse {
+  position: relative;
+  top: -60px;
+  background-color: #3471c4;
+  clip-path: ellipse(85% 50% at 50% 80%);
+  width: 200px;
+  height: 150px;
+}
+
+.card .text {
+  position: relative;
+  top: -150px;
+  width: 200px;
+  padding: 5px;
+}
+
+.card .text p {
+  text-align: center;
+  font-size:0.7rem;
+}
+
